# mccabe

./: .gitmodules  Makefile  README.md  build.py  pyproject.toml
.github/workflows/: ci.yml
CyclomaticComplexity/: __init__.py  cli.py
mcc/: __init__.py  cli.py  exceptions.py  languages.py
mcc/providers/: __init__.py  c.py  cpp.py  go.py  js.py  python.py
tests/: test_cyclomaticc_complexity.py  test_languages.py  test_provider.py
tests/sources/: c.c  cpp.cc  go.go  js.js  py.py
