[tool.poetry]
name = "mcc"
version = "0.1.0"
description = "Calculate the cyclomatic complexity of the source code"
authors = ["long2ice <long2ice@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/long2ice/mccabe"
repository = "https://github.com/long2ice/mccabe.git"
documentation = "https://github.com/long2ice/mccabe"
keywords = ["cyclomatic", "complexity", "code"]
packages = [
    { include = "mcc" }
]
build = "build.py"
include = ["CHANGELOG.md", "LICENSE", "README.md", "languages.so"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]

[tool.poetry.dependencies]
python = "^3.7"
tree-sitter = { git = "https://github.com/tree-sitter/py-tree-sitter.git" }
click = "^8.0.3"

[tool.poetry.dev-dependencies]
# test
pytest = "6.2.5"
pytest-mock = "3.6.1"
pytest-xdist = "2.4.0"
pytest-sugar = "0.9.4"
pytest-cov = "3.0.0"
pytest-benchmark = "^3.4.1"
# lint
black = "21.9b0"
isort = "5.9.3"
mypy = "0.910"
pyproject-flake8 = "^0.0.1-alpha.2"
bandit = "^1.7.0"
coveralls = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mcc = "mcc.cli:main"

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39"]

[tool.mypy]
ignore_missing_imports = true

[tool.flake8]
ignore = "E501,W503"
